<resources>
    <string name="app_name">Instagram</string>

    <!-- api image directories -->
    <string name="dir_post_photos">post_photos/</string>
    <string name="dir_profile_photos">profile_photos/</string>

    <!-- toast & snackbar messages -->
    <string name="msg_something_went_wrong">Something went wrong.</string>
    <string name="msg_fill_the_blanks">You must fill all fields.</string>
    <string name="msg_nothing_in_here">There is nothing in here.</string>

    <string name="msg_permission_granted">Permissions granted.</string>
    <string name="msg_permission_denied">Permissions denied.</string>

    <!-- feed & saved posts fragment -->
    <string name="fragment_feed_msg_no_post">There is not any post in your feed.</string>
    <string name="fragment_saved_posts_msg_no_post">You have not saved any post.</string>

    <!-- buttons -->
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>

    <string name="btn_edit">Edit</string>
    <string name="btn_cancel">Cancel</string>

    <!-- bottom navigation menu -->
    <string name="menu_nav_bottom_feed">Feed</string>
    <string name="menu_nav_bottom_search">Search</string>
    <string name="menu_nav_bottom_new_post">New Post</string>
    <string name="menu_nav_bottom_notifications">Notifications</string>
    <string name="menu_nav_bottom_profile">Profile</string>

    <!-- navigation menu -->
    <string name="menu_nav_my_profile">My Profile</string>
    <string name="menu_nav_saved_posts">Saved Posts</string>
    <string name="menu_nav_settings">Settings</string>
    <string name="menu_nav_log_out">Log Out</string>
    <string name="menu_nav_header_ph_username">Username</string> <!-- ph: placeholder -->

    <!-- post popup -->
    <string name="menu_popup_post_lbl_edit">Edit Post</string>
    <string name="menu_popup_post_lbl_delete">Delete Post</string>

    <!-- comment popup -->
    <string name="menu_popup_comment_lbl_edit">Edit Comment</string>
    <string name="menu_popup_comment_lbl_delete">Delete Comment</string>

    <!-- edit post & comment dialog -->
    <string name="dialog_edit_text_ph_type_something">Type something</string>
    <string name="dialog_edit_text_msg_text_cannot_be_empty">Text can not be empty.</string>

    <!-- sign in fragment -->
    <string name="fragment_sign_in_ph_user_name">Username</string>
    <string name="fragment_sign_in_ph_user_password">Password</string>
    <string name="fragment_sign_in_lbl_forgot_password">Forgot password?</string>
    <string name="fragment_sign_in_btn_sign_in">Sign In</string>
    <string name="fragment_sign_in_lbl_dont_have_an_account">Don\'t have an account?</string>
    <string name="fragment_sign_in_lbl_sign_up">Sign Up</string>

    <!-- sign up fragment -->
    <string name="fragment_sign_up_ph_user_email">Email</string>
    <string name="fragment_sign_up_ph_user_name">Username</string>
    <string name="fragment_sign_up_ph_user_password">Password</string>
    <string name="fragment_sign_up_btn_sign_up">Sign Up</string>
    <string name="fragment_sign_up_lbl_have_an_account">Have an account?</string>
    <string name="fragment_sign_up_lbl_sign_in">Sign In</string>

    <!-- card post & post details fragment -->
    <string name="card_post_likes">%1$d likes</string>
    <string name="card_post_msg_delete">Are you sure to delete this post?</string>
    <string name="fragment_post_details_ph_add_a_comment">Add a comment</string>
    <string name="fragment_post_details_msg_comment_cannot_be_empty">Comment can not be empty.</string>

    <!-- card comment -->
    <string name="card_comment_msg_delete">Are you sure to delete this comment?</string>

    <!-- profile & follow fragment and card user -->
    <string name="fragment_profile_lbl_name">%1$s (%2$s)</string>
    <string name="fragment_profile_ph_posts">Posts</string>
    <string name="fragment_profile_ph_followers">Followers</string>
    <string name="fragment_profile_ph_following">Following</string>
    <string name="fragment_profile_msg_private">This user\'s profile is private.</string>

    <string name="btn_follow">Follow</string>
    <string name="btn_following">Following</string>

    <!-- search fragment -->
    <string name="frg_search_ph_search">Search</string>

    <!-- notifications fragment -->
    <string name="fragment_notifications_msg_delete">Are you sure to delete all notifications?</string>

    <!-- new post fragment -->
    <string name="fragment_new_post_title">Share Post</string>
    <string name="fragment_new_post_ph_post_description">Post description</string>
    <string name="fragment_new_post_ph_select_image">Select Image</string>
    <string name="fragment_new_post_msg_select_image">You must select an image.</string>
    <string name="fragment_new_post_msg_description_can_not_be_empty">Post description can not be empty.</string>

    <!-- settings fragment -->
    <string name="fragment_settings_title">Edit Profile</string>
    <string name="fragment_settings_btn_update_photo">Update Profile Photo</string>
    <string name="fragment_settings_btn_select_photo">Select Photo</string>
    <string name="fragment_settings_lbl_remove_photo">Remove Photo</string>
    <string name="fragment_settings_ph_user_email">Email</string>
    <string name="fragment_settings_ph_user_password">Password</string>
    <string name="fragment_settings_ph_user_fullname">Name</string>
    <string name="fragment_settings_ph_user_bio">Bio</string>
    <string name="fragment_settings_cb_private_account">Private Account</string>
    <string name="fragment_settings_btn_save">Save</string>
    <string name="fragment_settings_msg_email_can_not_be_empty">Email can not be empty.</string>
    <string name="fragment_settings_msg_remove_photo">Are you sure to remove your profile photo?</string>
    <string name="default_photo">default.png</string>
</resources>