<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/ic_feed"
        android:title="@string/menu_nav_bottom_feed" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_nav_bottom_search" />
    <item
        android:id="@+id/newPostFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_nav_bottom_new_post" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications_empty"
        android:title="@string/menu_nav_bottom_notifications" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_user"
        android:title="@string/menu_nav_bottom_profile" />
</menu>